--- a/android_app/app/build.gradle
+++ b/android_app/app/build.gradle
@@ -16,11 +16,22 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+    signingConfigs {
+        create("release") {
+            // You need to specify either an absolute path or include the
+            // keystore file in the same directory as the build.gradle file.
+            storeFile = file("$System.env.KEYSTORE_LOCATION")
+            storePassword = "$System.env.STORE_PASSWORD"
+            keyAlias = "$System.env.KEY_ALIAS"
+            keyPassword = "$System.env.STORE_PASSWORD"
+        }
+        buildTypes {
 
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            release {
+                signingConfig signingConfigs.release
+                minifyEnabled false
+                proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            }
         }
     }
     compileOptions {
