--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,4 +12,4 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: cd server; docker build . --tag "wallpaper_wizard:${{ github.GITHUB_SHA }}"
+      run: cd server; docker build . --tag "wallpaper_wizard:${{ vars.GITHUB_SHA }}"
