--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,7 +2,7 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ "clemenz5-github-actions" ]
+    branches: [ "develop" ]
 
 jobs:
   build:
@@ -10,4 +10,10 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: cd server; docker build . --tag "wallpaper_wizard:${{ github.sha }}"
+    - run: cd server; docker build . --tag "wallpaper_wizard:${{ github.sha }}"
+
+  push:
+    needs: build
+    - run: echo ${{ secrets.CR_PAT }} | docker login ghcr.io -u clemenz5 --password-stdin
+    - run: docker tag "wallpaper_wizard:${{ GIT_COMMIT }}" ghcr.io/clemenz5/wallpaper_wizard:$(GIT_COMMIT)
+    - run: docker push ghcr.io/clemenz5/wallpaper_wizard:${{ GIT_COMMIT }}
