--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,10 +13,12 @@ jobs:
     - run: cd server; docker build . --tag "wallpaper_wizard:${{ github.sha }}"
 
   push:
+    runs-on: ubuntu-latest
     name: Push to Github Registry
     needs: build
-    runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v3
+    - name: Build the Docker image
     - run: echo ${{ secrets.CR_PAT }} | docker login ghcr.io -u clemenz5 --password-stdin
     - run: docker tag "wallpaper_wizard:${{ GIT_COMMIT }}" ghcr.io/clemenz5/wallpaper_wizard:$(GIT_COMMIT)
     - run: docker push ghcr.io/clemenz5/wallpaper_wizard:${{ GIT_COMMIT }}
