--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,7 +18,7 @@ jobs:
     needs: build
     steps:
     - uses: actions/checkout@v3
-    - name: Build the Docker image
+    - name: Push the Docker image
     - run: echo ${{ secrets.CR_PAT }} | docker login ghcr.io -u clemenz5 --password-stdin
     - run: docker tag "wallpaper_wizard:${{ GIT_COMMIT }}" ghcr.io/clemenz5/wallpaper_wizard:$(GIT_COMMIT)
     - run: docker push ghcr.io/clemenz5/wallpaper_wizard:${{ GIT_COMMIT }}
