removed syntax errors

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,4 +19,4 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-    - run: echo ${{ secrets.CR_PAT }} | docker login ghcr.io -u clemenz5 --password-stdin; docker tag "wallpaper_wizard:${{ GIT_COMMIT }}" ghcr.io/clemenz5/wallpaper_wizard:$(GIT_COMMIT); docker push ghcr.io/clemenz5/wallpaper_wizard:${{ GIT_COMMIT }}
+    - run: echo ${{ secrets.CR_PAT }} | docker login ghcr.io -u clemenz5 --password-stdin; docker tag "wallpaper_wizard:${{ github.sha }}" ghcr.io/clemenz5/wallpaper_wizard:${{ github.sha }}; docker push ghcr.io/clemenz5/wallpaper_wizard:${{ github.sha }}
