--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,14 +8,14 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
     - name: Build the Docker image
-    - run: cd server; docker build . --tag "wallpaper_wizard:${{ github.sha }}"
+      uses: actions/checkout@v3
+      run: cd server; docker build . --tag "wallpaper_wizard:${{ github.sha }}"
 
   push:
     runs-on: ubuntu-latest
     needs: build
     steps:
-    - uses: actions/checkout@v3
-    - name: Build the Docker image
-    - run: echo ${{ secrets.CR_PAT }} | docker login ghcr.io -u clemenz5 --password-stdin; docker tag "wallpaper_wizard:${{ github.sha }}" ghcr.io/clemenz5/wallpaper_wizard:${{ github.sha }}; docker push ghcr.io/clemenz5/wallpaper_wizard:${{ github.sha }}
+    - name: Push the Docker image
+      uses: actions/checkout@v3
+      run: echo ${{ secrets.CR_PAT }} | docker login ghcr.io -u clemenz5 --password-stdin; docker tag "wallpaper_wizard:${{ github.sha }}" ghcr.io/clemenz5/wallpaper_wizard:${{ github.sha }}; docker push ghcr.io/clemenz5/wallpaper_wizard:${{ github.sha }}
