--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -11,10 +11,10 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build the Docker image
       run: cd server; docker build . --tag "wallpaper_wizard:${{ github.sha }}"
-
-  push:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-    - name: Push the Docker image
-      run: echo ${{ secrets.CR_PAT }} | docker login ghcr.io -u clemenz5 --password-stdin; docker tag "wallpaper_wizard:${{ github.sha }}" ghcr.io/clemenz5/wallpaper_wizard:${{ github.sha }}; docker push ghcr.io/clemenz5/wallpaper_wizard:${{ github.sha }}
+    - name: Login to registry 
+      run: echo ${{ secrets.CR_PAT }} | docker login ghcr.io -u clemenz5 --password-stdin
+    - name: Tag image
+      run: docker tag "wallpaper_wizard:${{ github.sha }}" ghcr.io/clemenz5/wallpaper_wizard:${{ github.sha }}
+    - name: Push image
+      run: docker push ghcr.io/clemenz5/wallpaper_wizard:${{ github.sha }}
+    
