--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -19,9 +19,9 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
         cache: gradle
-    - name: Change working dir
-      run: cd android_app
     - name: Grant execute permission for gradlew
+      working-directory: ./android_app
       run: chmod +x gradlew
     - name: Build with Gradle
+      working-directory: ./android_app
       run: ./gradlew build
