--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -31,6 +31,7 @@ jobs:
 
   release:
     runs-on: ubuntu-latest
+    needs: build
     if: github.ref_name == 'master' || github.ref_name == 'develop'
     steps:
     - name: Download apk from Artifacts
