--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -2,9 +2,7 @@ name: Android CI
 
 on:
   push:
-    branches: [ "staging" ]
-  pull_request:
-    branches: [ "develop" ]
+    branches: [ "staging", "develop" ]
 
 jobs:
   build:
