--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -40,8 +40,8 @@ jobs:
       uses: "marvinpinto/action-automatic-releases@latest"
       with:
         repo_token: "${{ secrets.CR_PAT }}"
-        automatic_release_tag: "latest"
-        prerelease: true
+        automatic_release_tag: "${{ github.ref_name }}:latest"
+        prerelease: ${{ github.ref_name == 'develop' }}
         title: "Development Build"
         files: app-release_unsigned-unsigned.apk
 
