--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -2,7 +2,7 @@ name: Android CI
 
 on:
   push:
-    branches: [ "staging", "develop" ]
+    branches: [ "staging", "develop", "main" ]
 
 jobs:
   build:
@@ -30,7 +30,7 @@ jobs:
   release:
     runs-on: ubuntu-latest
     needs: build
-    if: github.ref_name == 'master' || github.ref_name == 'develop'
+    if: github.ref_name == 'main' || github.ref_name == 'develop'
     steps:
     - name: Download apk from Artifacts
       uses: actions/download-artifact@v3
