--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,7 +2,7 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ "develop", "master" ]
+    branches: [ "staging", "develop", "main" ]
 
 jobs:
   build:
@@ -19,7 +19,7 @@ jobs:
   release:
     runs-on: ubuntu-latest
     needs: build
-    if: github.ref_name == 'master' || github.ref_name == 'develop'
+    if: github.ref_name == 'main' || github.ref_name == 'develop'
     steps:
     - name: Download image
       uses: ishworkh/docker-image-artifact-download@v1
