added follower, typescript and better logs

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -6,4 +6,5 @@ WORKDIR /wallpaper_wizard
 COPY package.json /wallpaper_wizard/
 RUN npm install
 COPY * /wallpaper_wizard/
+RUN npx tsc
 CMD sqlite3 data/wallpaper_wizard.db; node wallpaper_wizard.js
