--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@types/multer": "^1.4.7",
     "crypto": "^1.0.1",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
@@ -7,6 +8,12 @@
     "request": "^2.88.2",
     "sqlite3": "^5.1.4",
     "swagger-ui": "^4.15.5",
-    "swagger-ui-express": "^4.6.0"
+    "swagger-ui-express": "^4.6.0",
+    "typescript": "^5.0.4"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.17",
+    "@types/node": "^20.1.2",
+    "@types/sqlite3": "^3.1.8"
   }
 }
