--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
     "crypto": "^1.0.1",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
+    "image-thumbnail": "^1.0.15",
     "multer": "^1.4.5-lts.1",
     "request": "^2.88.2",
     "sqlite3": "^5.1.4",
